--- a/alayatodo/templates/todos.html
+++ b/alayatodo/templates/todos.html
@@ -4,16 +4,29 @@
 <div class="col-md-4 col-md-offset-4">
     <h1>Todo List:</h1>
     <table class="table table-striped">
-        <th>#</th><th>User</th><th>Description</th><th></th>
+        <th>#</th><th>User</th><th>Description</th><th></th><th></th>
         {% for todo in todos %}
             <tr>
                 <td>{{ todo.id }}</td>
                 <td>{{ todo.user_id }}</td>
                 <td>
-                    <a href="{{ url_for('todo', id=todo.id) }}">
+                    <a href="{{ url_for('todo', id=todo.id) }}" {% if todo.completed %}class="markedcompleted"{% endif %}>
                        {{ todo.description }}
                     </a>
                 </td>
+		{% if todo.completed %}
+		    <td>
+                        <form method="post" action="{{ url_for('todo_uncomplete', id=todo.id) }}">
+                            <button type="submit" class="btn btn-xs btn-warning"><span class="glyphicon glyphicon-unchecked glyphicon-white"></span></button>
+                        </form>
+                    </td>
+		{% else %}
+		    <td>
+                        <form method="post" action="{{ url_for('todo_complete', id=todo.id) }}">
+                            <button type="submit" class="btn btn-xs btn-success"><span class="glyphicon glyphicon-check glyphicon-white"></span></button>
+                        </form>
+                    </td>
+		{% endif %}
                 <td>
                     <form method="post" action="{{ url_for('todo_delete', id=todo.id) }}">
                         <button type="submit" class="btn btn-xs btn-danger"><span class="glyphicon glyphicon-remove glyphicon-white"></span></button>
